[package]
name = "what-the-fork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3.17"
log = "0.4"
serde = "1.0.130"
serde_derive = "1.0.130"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.5"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.11.0+solana.1.16.17" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.11.0+solana.1.16.17" }


